feat(substrate): Story 1.4 compile-time null-safety gate (JSpecify + NullAway, AD-35)
Add the smpp.null-safety buildSrc convention plugin: applies net.ltgt.errorprone +
NullAway at CheckSeverity.ERROR reading JSpecify (@NullMarked) on MAIN compile of
both proxy and codec — a nullness violation now fails javac before it ships.
Complements AD-17's runtime @Validated/@NotNull with build-time enforcement, on
the annotation standard Spring Framework 7 / Boot 4 already migrated to.

Wiring (Option A — NullAway's canonical form, adversarially verified): apply
net.ltgt.errorprone only; place com.uber.nullaway:nullaway on the `errorprone`
config as a check lib (there is no separate com.uber.nullaway Gradle plugin —
contrary to the spec's literal Task 1). Versions impl-selected and mutually green
on JDK 25 / Gradle 9.6.1 / Spring Boot 4.1: error_prone_core 2.50.0, nullaway
0.13.8, net.ltgt.errorprone 5.1.0, jspecify 1.0.0.

- @NullMarked on all seven main package-info.java (incl. the root smpp.companion.proxy package, added in the code-review pass); jspecify on proxy
  (implementation) and codec (compileOnly) so codec runtime stays {io.netty}+JDK
  (AD-7 / AD-27).
- CODEC-040 allowlist amended to {io.netty, org.jspecify} (AC5).
- AC4 positive control (NullSafetyGateTest): GradleTestKit drives the REAL plugin
  — a JSpecify-only violation fails :compileJava asserting NullAway + the
  offender; mutation counterparts prove JSpecifyMode / severity / application are
  each load-bearing; a clean source compiles.
- AC5 controls in CodecPurityGateTest: jspecify-allowed + errorprone-config-blindness.

Test sources are out of scope for v1 (NullAway disabled on compileTestJava); a
follow-up extends the gate to test roots once they carry @NullMarked.

Code-review pass (bmad-code-review; Edge Case Hunter + Acceptance Auditor + Blind
Hunter): added the 7th @NullMarked package-info (root smpp.companion.proxy) and a
caveat comment on the disable branch flagging that future non-compileJava ma